vuetify major breaks fixed, tabs and etc

--- a/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
@@ -67,7 +67,7 @@
     .course-empty-state {
         text-align: center;
 
-        .btn:not(.btn--icon):not(.btn--flat) {
+        .v-btn:not(.v-btn--icon):not(.v-btn--flat) {
             background-color: @color-blue;
             color: white;
             width: 96px;
@@ -117,7 +117,7 @@
         }
     }
 
-    .expansion-panel {
+    .v-expansion-panel {
         @border-bg-image: linear-gradient(to right, #3023ae, #3293f6) 10;
 
         border-bottom: 0;
@@ -126,12 +126,12 @@
         box-shadow: none;
         border-top: 1px solid @color-grey;
 
-        .expansion-panel__container {
+        .v-expansion-panel__container {
             background-color: transparent;
             border: none;
             max-width: 100%;
 
-            .expansion-panel__header {
+            .v-expansion-panel__header {
                 padding: 7px 3px 7px 2px;
                 font-weight: bold;
                 border-bottom: 1px solid @color-grey;
@@ -142,7 +142,7 @@
                 letter-spacing: -0.6px;
 
 
-                i.icon {
+                i.v-icon {
                     font-size: 24px;
                     color: @color-blue;
                     margin-right: 4px;
@@ -204,7 +204,7 @@
                 }
             }
 
-            .expansion-panel__body {
+            .v-expansion-panel__body {
                 ::-webkit-scrollbar {
                     width: 3px;
                 }
