--- a/Cloudents.Web/ClientApp/components/book/header.less
+++ b/Cloudents.Web/ClientApp/components/book/header.less
@@ -5,21 +5,21 @@
 .book-header {
 
     @media(max-width: @screen-xs) {
-        .toolbar-title {
+        .v-toolbar-title {
             color: @color-purple;
         }
 
-        .tabs {
+        .v-tabs {
             li {
                 font-size: 16px;
                 font-weight: 600;
 
-                &:not(.tabs__item--active) {
+                &:not(.v-tabs__item--active) {
                     color: #cea1ec;
                 }
             }
 
-            .tabs__slider {
+            .v-tabs__slider {
                 height: 4px;
             }
         }
