--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -123,7 +123,7 @@
         flex-direction: row;
         //flex-direction: row-reverse;
         //align-items: center;
-        .btn__content {
+        .v-btn__content {
             flex-direction: row-reverse;
             .counter {
                 color: white;
@@ -171,7 +171,7 @@
     }
 }
 
-.chip.filter-chip {
+.v-chip.filter-chip {
     margin: 0 8px 8px 0;
     border: none;
 
@@ -183,7 +183,7 @@
         }
     }
 
-    .chip__content {
+    .v-chip__content {
         padding: 0 4px 0 8px;
         letter-spacing: -0.8px;
         min-width: 102px;
