--- a/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
+++ b/Cloudents.Web/ClientApp/components/helpers/user-block/user-block.less
@@ -13,7 +13,7 @@
     }
     .university,.name{display: none;}
 
-    .avatar {
+    .v-avatar {
         margin-right: 9px;
         background: blue;
 
@@ -32,7 +32,7 @@
 
    
     &.chat{
-        .avatar{
+        .v-avatar{
             width: 40px;
             height: 40px;
             border-radius: 0; 
@@ -60,9 +60,9 @@
         flex-direction: column;
         justify-content: center;
 
-        .avatar{
-            width: 64px;
-            height: 64px;
+        .v-avatar.user-avatar{
+            width: 64px!important;
+            height: 64px!important;
             border-radius: 35px;
             margin: 17px 0 7px;
         }   
