--- a/Cloudents.Web/ClientApp/components/preview/flashcard.less
+++ b/Cloudents.Web/ClientApp/components/preview/flashcard.less
@@ -239,7 +239,7 @@
             line-height: 32px;
         }
 
-        .icon {
+        .v-icon {
             display: flex;
             align-items: center;
             flex-direction: column;
@@ -827,11 +827,11 @@
         display: none;
     }
 
-    .list__tile {
+    .v-list__tile {
         min-height: 30px;
         height: 33px;
 
-        .list__tile__title {
+        .v-list__tile__title {
             font-size: 13px;
         }
     }
