--- a/Cloudents.Web/ClientApp/components/preview/headerDocument.less
+++ b/Cloudents.Web/ClientApp/components/preview/headerDocument.less
@@ -55,12 +55,12 @@
     padding: 0;
     border-radius: 4px;
 
-    .list__tile {
+    .v-list__tile {
         height: 36px;
     }
 }
 
-.tooltip__content {
+.v-tooltip__content {
     width: 60%;
     max-width: 400px;
 }
