--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -61,7 +61,7 @@
       top: 9px;
     }
 
-    .icon {
+    .v-icon {
       color: @color-main-purple;
       font-size: 16px;
     }
@@ -279,7 +279,7 @@
     }
   }
 
-  .btn.ask_btn {
+  .v-btn.ask_btn {
     position: relative;
     height: 48px;
     border-radius: 3px;
