--- a/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerAccount/registerAccount.less
@@ -1,6 +1,6 @@
 @import "../../../../mixin.less";
 
-.step-account .step-wrapper, .dialog .limited-width.custom {
+.step-account .step-wrapper, .v-dialog .limited-width.custom {
   .continue-btn {
     margin-top: 13px;
     @media (max-width: @screen-xs) {
