--- a/Cloudents.Web/ClientApp/components/registration/verifyPhone/verify.less
+++ b/Cloudents.Web/ClientApp/components/registration/verifyPhone/verify.less
@@ -255,7 +255,7 @@
     margin: 0;
   }
 }
-.back-button {
+.back-button.verify-close {
   position: absolute;
   z-index: 9;
   top: 12px;
@@ -383,7 +383,7 @@
     }
   }
 }
-.snack__content {
+.v-snack__content {
   margin-top: 24px;
   width: 616px;
   height: 48px;
