--- a/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
@@ -13,7 +13,7 @@
         font-weight: 300;
         letter-spacing: -0.4px;
         border-radius: 0;
-        .btn__content {
+        .v-btn__content {
             text-transform: none;
         }
     }
