--- a/Cloudents.Web/ClientApp/components/dialog-toolbar/DialogToolbar.less
+++ b/Cloudents.Web/ClientApp/components/dialog-toolbar/DialogToolbar.less
@@ -1,10 +1,10 @@
 ﻿@import "../../mixin.less";
 
-.dialog-toolbar.toolbar {
+.dialog-toolbar.v-toolbar {
     background: @color-white;
 
-    .toolbar__content {
-        .toolbar-title {
+    .v-toolbar__content {
+        .v-toolbar-title {
             font-size: 18px;
             font-weight: 400;
             margin-left: 0;
@@ -15,7 +15,7 @@
             margin-right: 0;
             letter-spacing: -0.2px;
 
-            .btn__content {
+            .v-btn__content {
                 text-transform: none;
                 color: @color-blue;
                 padding-left: 12px;
@@ -24,7 +24,7 @@
             }
         }
 
-        .back.btn {
+        .back.v-btn {
             margin-left: 2px;
 
             .sbf-chevron-down {
