--- a/Cloudents.Web/ClientApp/components/header/verticalTabs.less
+++ b/Cloudents.Web/ClientApp/components/header/verticalTabs.less
@@ -1,14 +1,16 @@
 ﻿@import "../../mixin.less";
 
 .verticals.line {
-    .limited-width();
+    .limited-width()!important;
     @media(max-width: @screen-sm) {
         align-items: stretch;
     }
 
-    .tabs__item {
+    .v-tabs__item {
         text-transform: capitalize;
-        padding: 0 !important;
+        padding: 0 0 16px 0 !important;
+        //Vuetify 1.1.1
+        //padding: 0 !important;
         font-size: 14px;
         font-weight: 600;
         letter-spacing: -0.2px;
@@ -27,14 +29,18 @@
             padding-left: 8px;
         }
 
-        .tabs__bar {
+        .v-tabs__bar {
             height: 100%;
-            .tabs__slider {
+            .v-tabs__slider-wrapper{
+                bottom: 4px;
+            }
+            .v-tabs__slider {
                 height: 3px;
+                bottom: 4px;
             }
         }
 
-        .tabs__bar .tabs__li {
+        .v-tabs__bar .v-tabs__li {
             flex-basis: auto;
             padding-bottom: 14px;
             @media(max-width: @screen-xs){
