--- a/Cloudents.Web/ClientApp/components/satellite/faq.less
+++ b/Cloudents.Web/ClientApp/components/satellite/faq.less
@@ -3,8 +3,8 @@
 .faq {
     .responsive-property(padding-top, 18px, null, 0px);
 
-    .expansion-panel {
-        .expansion-panel__container {
+    .v-expansion-panel {
+        .v-expansion-panel__container {
             background-color: transparent;
             border-bottom: 1px solid #302eb5;
             border-top: none;
@@ -17,11 +17,11 @@
                 color: #302eb5 !important;
             }
 
-            .expansion-panel__header {
+            .v-expansion-panel__header {
                 padding: 18px 16px;
             }
 
-            .expansion-panel__body {
+            .v-expansion-panel__body {
                 background: #fff;
                 color: #000000;
                 line-height: 1.67;
@@ -35,11 +35,11 @@
         }
 
 
-        .expansion-panel__container--active {
-            margin: 0 -8px;
+        .v-expansion-panel__container--active {
+            margin: -3px -8px;
             border-bottom: none;
 
-            .expansion-panel__header {
+            .v-expansion-panel__header {
                 background-color: #302eb5;
                 color: #fff;
                 padding-left: 24px;
