--- a/Cloudents.Web/ClientApp/components/settings/view/settings.less
+++ b/Cloudents.Web/ClientApp/components/settings/view/settings.less
@@ -73,7 +73,7 @@
   
       @media (max-width: @screen-xs) {top: 13px;}
   
-      .icon {
+      .v-icon {
         color: @color-main-purple;
         font-size: 16px;
       }
@@ -90,12 +90,13 @@
     font-size: 10px;
     letter-spacing: -0.2px;
 
-    .avatar{
+    .v-avatar{
       width: 64px;
       height: 64px;
       border-radius: 35px;
       margin-right: 11px;
       cursor: pointer;
+
     } 
     .text-blue{font-size: 14px;}
   }
@@ -105,7 +106,7 @@
     border: solid 1px #979797;
     border-radius: 4px;
     font-size: 14px;
-    .sbf.icon{
+    .sbf.v-icon{
       font-size: 16px;
     }    
   }
@@ -122,7 +123,7 @@
     }
   }
 
-  .btn.save{
+  .v-btn.save{
     position: relative;
     height: 48px;
     border-radius: 3px;
