vutify fixes classes v 1.2

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -283,7 +283,7 @@
     align-items: start;
   }
 
-  .btn {
+  .v-btn {
     margin: 6px 1px 6px 0px;
   }
 
@@ -304,7 +304,7 @@
 
 .menu.gamburger, .header-rocket {
   @media (max-width: (@screen-xs)) {
-    .btn {
+    .v-btn {
       margin: 0;
     }
   }
@@ -322,7 +322,7 @@
     width: 32px;
     border-radius: 50%;
   }
-  button.btn {
+  button.v-btn {
     background-color: @color-blue;
     color: @color-white;
     width: 48px;
