vuetify 1.1.1 final fixes, zoom image, great job pop up and more

--- a/Cloudents.Web/ClientApp/components/helpers/ResultPersonalize.less
+++ b/Cloudents.Web/ClientApp/components/helpers/ResultPersonalize.less
@@ -54,7 +54,7 @@
         margin-right: 6px;
         .responsive-property(padding-top, null, null, 16px);
 
-        .btn {
+        .v-btn {
             min-width: 0;
             margin: 0 10px;
             text-transform: none;
@@ -62,7 +62,7 @@
             letter-spacing: -0.3px;
             color: @Spitball-Main-color;
 
-            .btn__content {
+            .v-btn__content {
                 padding: 4px;
             }
         }
