--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -221,7 +221,7 @@
     }
   }
 
-  .btn {
+  .v-btn {
     .sbf-3-dot, .sbf-wallet, .sbf-menu, .sbf-comment, .sbf-feedback {
       color: @color-main-purple;
       font-size: 17px;
