--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -347,7 +347,7 @@
       position: absolute;
       bottom: 26px;
     }
-    .btn-wrap {
+    .v-btn-wrap {
       //padding-right: 185px;
       .responsive-property(width, @table-width * 0.4, null, 100%);
       text-align: right;
