--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -291,5 +291,14 @@
     background-color: #FF006B;
     .cellActionBtnMixin();
   }
-
-}      
+  .v-dialog.zoom-image{
+    overflow-y: hidden;
+    width: auto!important;
+    border: 1px solid red;
+  }
+ .zoomed-image{
+   height: auto;
+   width: 100%;
+   max-height: 720px;
+ }
+}
