--- a/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
+++ b/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
@@ -1,12 +1,102 @@
 @import "../../mixin.less";
-div.question-suggest  {
-  max-width: 700px;
-  h2 {
-    font-size: 48px;
-    font-weight: 300;
-    letter-spacing: -0.9px;
-    text-align: center;
-    color: @color-main-purple;
-  }
 
+div.question-suggest {
+  max-width: 700px;
+  font-size: 16px;
+  .dialog-wrapp {
+    height: 100%;
+    padding: 48px 48px 24px 48px;
+    position: relative;
+    @media (max-width: @screen-xs) {
+      padding: 56px 6px 48px 6px;
+      .wrap-text {
+        padding: 0 6px 0 6px;
+      }
+    }
+    p {
+      //margin-bottom: 12px;
+      &:last-child {
+        margin-bottom: 32px;
+      }
+      @media (max-width: @screen-xs) {
+        &:last-child {
+          margin-bottom: 32px;
+        }
+      }
+      .user-name {
+        color: @Spitball-Main-color;
+      }
+    }
+  }
+  .v-card {
+    .close-btn {
+      position: absolute;
+      right: 16px;
+      top: 16px;
+      .v-icon {
+        font-size: 16px;
+        color: @color-main-purple;
+      }
+    }
+    .v-carousel {
+      height: auto;
+      min-height: 274px;
+      @media (max-width: @screen-xs) {
+        min-height: 460px;
+      }
+      box-shadow: none;
+      .v-carousel__controls {
+        .v-btn--icon.v-btn--small{
+          width: 20px;
+        }
+        .v-icon {
+          font-size: 12px !important;
+        }
+        background-color: transparent;
+      }
+      .v-carousel__prev, .v-carousel__next {
+        @media (max-width: @screen-xs) {
+          display: none;
+        }
+        top: 90%;
+        z-index: 3;
+
+      }
+      .v-icon {
+        color: @color-main-purple;
+        font-size: 24px !important;
+      }
+      .question-card {
+        margin: auto;
+        max-height: 180px;
+        max-width: 99%;
+        background-color: #ffffff;
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+        border-radius: 4px;
+        @media (max-width: @screen-xs) {
+          max-height: 280px;
+        }
+        p {
+          @media (max-width: @screen-xs) {
+            //margin: 0;
+          }
+        }
+      }
+    }
+    h2 {
+      font-size: 48px;
+      font-weight: 300;
+      letter-spacing: -0.9px;
+      text-align: left;
+      margin-bottom: 32px;
+      display: inline-block;
+      width: 100%;
+      height: 48px;
+      color: @color-main-purple;
+      @media (max-width: @screen-xs) {
+        margin-bottom: 24px;
+      }
+    }
+
+  }
 }
