banner hide on scroll, toaster updated.

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -96,6 +96,12 @@
                     display: block;
                 }
             }
+            @media(max-width: @screen-xs){
+                .cell .show-btn, .show-btn{
+                    display: block;
+                }
+            }
+
         }
     }
 
