--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,5 +1,10 @@
 ﻿@import "../../mixin.less";
-
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+}
 .personalize-wrapper {
     background: white;
     border-radius: 4px;
