--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -2,7 +2,7 @@
 
 .ask_question {
   .inputBorder{
-    border: 1px solid transparent;
+    //border: 1px solid transparent;
   }
   .error-block {
     text-align: center;
