wallet style cross sign

--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -47,6 +47,7 @@
         width: 17px;
         position: relative;
         outline: none;
+        top: 0;
         @media (max-width: @screen-sm) {
           top: 0;
         }
