verify login and filter css

--- a/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
@@ -122,7 +122,8 @@
                     border-top: 0;
                     border-left: 0;
                     border-right: 0;
-                    max-height: 250px;
+                    //max-height: 250px;
+                    max-height: 350px;
                     overflow-y: scroll;
                     .filter {
                         display: flex;
