--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -190,6 +190,7 @@
     min-height: 100vh;
     @media (max-width: @screen-xs) {
       min-height: 90vh;
+      height: 90vh;
     }
     .side-wrapper {
       align-items: center;
