--- a/Cloudents.Ico/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Ico/Views/Shared/_Layout.cshtml
@@ -12,23 +12,26 @@
         <link rel="stylesheet" href="~/css/vendor.bundle.css" />
     </environment>
     <environment exclude="Development">
-     
+        <link rel="stylesheet" href="~/css/site.min.css" />
     </environment>
 </head>
-<body>
-  
-  
-        @RenderBody()
-     
-       
-  
+<body class="theme-muscari io-mascari" data-spy="scroll" data-target="#mainnav" data-offset="80">
+    @RenderBody()
+    <!-- Preloader !remove please if you do not want -->
+    <div id="preloader">
+        <div id="loader"></div>
+        <div class="loader-section loader-top"></div>
+        <div class="loader-section loader-bottom"></div>
+    </div>
+    <!-- Preloader End -->
+    <!-- JavaScript (include all script here) -->
 
     <environment include="Development">
+        <script src="~/js/jquery.bundle.js" asp-append-version="true"></script>
+        <script src="~/js/script.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
-       
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
-
 </body>
 </html>
