--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -22,10 +22,14 @@
     }
 
     h6 {
+        color: @color-main-purple;
         font-size: 16px;
-        color: #003b78;
         letter-spacing: -0.3px;
         line-height: 1.25;
+        font-weight: normal;
+        .user-search-text{
+            color: @color-grey;
+        }
     }
 
     .sug {
@@ -36,6 +40,7 @@
 
     ul {
         list-style-position: inside;
+        padding: 0;
     }
 
     li {
