--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -349,7 +349,7 @@
       //position: absolute;
       //bottom: 26px;
     }
-    .v-btn-wrap {
+    .btn-wrap {
       //padding-right: 185px;
       .responsive-property(width, @table-width * 0.4, null, 100%);
       text-align: right;
