--- a/Cloudents.Web/ClientApp/components/results/ResultTutor.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultTutor.less
@@ -1,6 +1,7 @@
 ﻿@import "../../mixin.less";
 
 .tutor-cell {
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
     .avatar {
         height: 120px !important; /*override inline style*/
         box-shadow: 0px 0px 1px @color-grey;
@@ -8,16 +9,42 @@
 
     .tutor-title {
         font-size: 17px;
-        letter-spacing: -0.4px;
+        letter-spacing: -0.3px;
         color: @Tutors;
+        font-weight: bold;
     }
 
     .avatar {
         .flexSameSize();
     }
 
-    .price-wrap {
-        text-align: right;
+    .q-price {
+        height: 41px;
+        min-width: 128px;
+        max-width: 128px;
+        //width: 105px;
+        overflow: hidden;
+        border-radius: 0 4px 0 36px;
+        background-color: @color-light-grey;
+        //border: solid 0.5px #dddddd;
+        //border-top: 0;
+        //border-left: 0;
+        font-size: 18px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        color: @color-main-purple;
+        text-align: center;
+        padding-left: 16px;
+        display: inline-block;
+
+
+        span {
+            //line-height: 40px;
+            display: block;
+            letter-spacing: -0.4px;
+            margin: 9px auto;
+        }
     }
 
     .price {
@@ -34,10 +61,10 @@
     }
 
     .description-wrap {
-        margin-top: 4px;
+        margin-top: 14px;
 
         .description {
-            font-size: 12px;
+            font-size: 16px;
             letter-spacing: -0.3px;
             color: @Book-Info;
             overflow: hidden;
