--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -126,12 +126,10 @@
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
+    @*<noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2BGS2G"
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    </noscript>*@
     <div>
         @RenderBody()
     </div>
