content update for ice page teplate

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -1551,12 +1551,12 @@ global marketplace for students.</p>
                 </div><!-- .col  -->
                 <div class="col-xl-4">
                     <ul class="link-widget animated" data-animate="fadeInUp" data-delay=".8">
-                        <li><a href="#" class="menu-link">Vision</a></li>
-                        <li><a href="#" class="menu-link">Roadmap</a></li>
-                        <li><a href="#" class="menu-link">Use cases</a></li>
-                        <li><a href="#" class="menu-link">Team</a></li>
-                        <li><a href="#" class="menu-link">FAQs</a></li>
-                        <li><a href="#" class="menu-link">Contact us</a></li>
+                        <li><a href="#intro" class="menu-link">Vision</a></li>
+                        <li><a href="#roadmap" class="menu-link">Roadmap</a></li>
+                        <li><a href="#apps" class="menu-link">Use cases</a></li>
+                        <li><a href="#team" class="menu-link">Team</a></li>
+                        <li><a href="#faq" class="menu-link">FAQs</a></li>
+                        <li><a href="#contact" class="menu-link">Contact us</a></li>
                         <!-- <li><a href="#" class="menu-link">Roadmap</a></li>
                         <li><a href="#" class="menu-link">Teams</a></li>
                         <li><a href="#" class="menu-link">FAQ</a></li> -->
