white paper link telegram icon

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -74,8 +74,8 @@
                                 <p class="lead animated" data-animate="fadeInUp" data-delay="1.35">
                                 Enabling students from all over the world to interact directly with each other to exchange content, knowledge and services without the involvement of costly 3rd-party intermediaries.<br class="d-none d-xl-block"> based on deeply research </p>
                                 <ul class="btns animated" data-animate="fadeInUp" data-delay="1.45">
-                                    <li><a href="#" class="btn btn-outline">JOIN US ON TELEGRAM</a></li>
-                                    <li><a href="#" class="btn btn-simple"> <em class="fa fa-file"></em> Download Whitepaper</a></li>
+                                    <li><a href="#" class="btn btn-outline"><em class="fa fa-paper-plane"></em><span>Join us on Telegram</span></a></li>
+                                    <li><a href="https://zboxstorage.blob.core.windows.net/zboxhelp/white%20paper%201.1.pdf" target="_blank" class="btn btn-simple"> <em class="fa fa-file"></em> Download Whitepaper</a></li>
                                 </ul>
                             </div>
                         </div><!-- .col  -->
