--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -42,7 +42,7 @@ button {
 @vertical-tutor: #52ab15;
 @vertical-book: #8c3fbf;
 @vertical-job: #f49c20;
-@vertical-food: #2cbfa5;
+//@vertical-food: #2cbfa5;
 //@vertical-upload: #94b7cb;
 //@vertical-post: #414141;
 //@vertical-create: #a40115;
@@ -50,7 +50,7 @@ button {
 //@vertical-course: #2adaff;
 //@vertical-like: #7ed321;
 //@vertical-setting: #07305a;
-@list-verticals: marketplace, ask,flashcard,note,tutor,book,food,job;
+@list-verticals: marketplace, ask,flashcard,note,tutor,book,job;
 
 .horizontal-variant(@variant,@p) {
     @color: "vertical-@{variant}"; 
