--- a/Cloudents.Ico/wwwroot/css/theme.css
+++ b/Cloudents.Ico/wwwroot/css/theme.css
@@ -1073,7 +1073,8 @@ a {
         }
 
         .theme-muscari .countdown-box.countdown-transparent {
-            background: rgba(0, 33, 205, 0.8) !important;
+            background:transparent!important;
+            /* background: rgba(0, 33, 205, 0.8) !important; */
         }
 
     .theme-muscari .token-status-point::after {
