--- a/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
@@ -213,6 +213,7 @@ ul.actions_text {
   list-style: none;
   display: inline-block;
   margin: 1px 9px 1px 3px;
+  padding-left: 0;
   &:first-of-type {
     //width: 135px;
     //border-right: 1px solid #dddddd;
