ICO page css fonts, modal

--- a/Cloudents.Ico/Views/Home/Index.cshtml
+++ b/Cloudents.Ico/Views/Home/Index.cshtml
@@ -74,7 +74,7 @@
                                 <p class="lead animated" data-animate="fadeInUp" data-delay="1.35">
                                 Enabling students from all over the world to interact directly with each other to exchange content, knowledge and services without the involvement of costly 3rd-party intermediaries.<br class="d-none d-xl-block"> based on deeply research </p>
                                 <ul class="btns animated" data-animate="fadeInUp" data-delay="1.45">
-                                    <li><a href="#" class="btn btn-outline"><em class="fa fa-paper-plane" style="margin-right: 8px;"></em>Join us on Telegram</a></li>
+                                    <li><a href="https://t.me/Spitball" target="_blank" class="btn btn-outline"><em class="fa fa-paper-plane" style="margin-right: 8px;"></em>Join us on Telegram</a></li>
                                     <li><a href="https://zboxstorage.blob.core.windows.net/zboxhelp/white%20paper%201.1.pdf" target="_blank" class="btn btn-simple"> <em class="fa fa-file"></em> Download Whitepaper</a></li>
                                 </ul>
                             </div>
@@ -1409,7 +1409,7 @@ global marketplace for students.</p>
                     <ul class="contact-info-alt">
                         <li class="animated" data-animate="fadeInUp" data-delay=".2"><em class="fa fa-phone"></em><span>+972 52 883 0686</span></li>
                         <li class="animated" data-animate="fadeInUp" data-delay=".3"><em class="fa fa-envelope"></em><span> <a href="mailto:tokensale@spitball.co?Subject=Spitball%20Info">tokensale@spitball.co</a></span></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay=".4"><em class="fa fa-paper-plane"></em><span></span><a href="https://t.me/Spitball">Join us on Telegram</a></span></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay=".4"><em class="fa fa-paper-plane"></em><span></span><a href="https://t.me/Spitball" target="_blank">Join us on Telegram</a></span></li>
                     </ul>
                 </div><!-- .col  -->
                 <div class="col-lg-5">
@@ -1590,5 +1590,13 @@ global marketplace for students.</p>
             </div><!-- .row  -->
         </div><!-- .container  -->
     </div>
+  <div class="card" id="telegramPopUp">
+    <a href="#" id="closeTelegramPopUp" class="fa fa-times"></a>
+  <div class="card-body">
+    <h5 class="card-title">WE’RE ON TELEGRAM</h5>
+    <p class="card-text">come ask us anything!</p>
+    <a href="https://t.me/Spitball" target="_blank" class="btn"><em class="fa fa-paper-plane" style="margin-right: 8px;"></em>Join us on Telegram</a>
+  </div>
+</div>
     <!-- End Section -->
    
