--- a/Cloudents.Ico/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Ico/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
 
     <environment include="Development">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/theme.css" />
         <link rel="stylesheet" href="~/css/vendor.bundle.css" />
